# cima-esp32-azure

./: .gitignore  CMakeLists.txt  GetStarted.ino  README.md  init_cmake.bat  init_cmd.bat  partitions.csv  sdkconfig.defaults
doc/: cima-esp32-azure.archimate
filesystem/: coldLightSchedule.json  sheep.txt  warmLightSchedule.json
filesystem/connectivity/: azure.json  wifi.json
filesystem/identity/: cimaesp32.crt  cimaesp32.pem
main/: Agent.cpp  Agent.h  CMakeLists.txt  CimaEsp32Agent.cpp  GreetingService.cpp  GreetingService.h  LightAlarmService.cpp  LightAlarmService.h  LightGroupService.cpp  LightGroupService.h  LightSettings.cpp  LightSettings.h
main/certificates/: CertSource.cpp  CertSource.h
main/display/: Display.cpp  Display.h  StatusIcon.cpp  StatusIcon.h
main/iot/: AzureConfig.cpp  AzureConfig.h  CertSource.cpp  CertSource.h  DeviceProvisioningClient.cpp  DeviceProvisioningClient.h  IoTHubManager.cpp  IoTHubManager.h
main/log/: Log.cpp  Log.h
main/system/: ButtonController.cpp  ButtonController.h  EnvironmentSensorManager.cpp  EnvironmentSensorManager.h  ExecutionLimiter.cpp  Log.cpp  Log.h  ManagerNotInitializedException.h  PWMDriver.cpp  PWMDriver.h  WifiCredentials.cpp  WifiCredentials.h  WifiManager.cpp  WifiManager.h  WireManager.cpp  WireManager.h
main/system/network/: M590.cpp  M590.h  ModemManager.cpp  ModemManager.h  NetworkManager.cpp  NetworkManager.h  README.md  Rf433Controller.cpp  Rf433Controller.h  WifiCredentials.cpp  WifiManager.cpp  WifiManager.h
